[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/LoadSelect.gd" type="Script" id=1]
[ext_resource path="res://fonts/buttonFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/UI/Sand.png" type="Texture" id=5]
[ext_resource path="res://fonts/slotText.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 64, 64 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuBG" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 41, 46 )
custom_constants/separation = 15
alignment = 1

[node name="SpacerOrInstr" type="Label" parent="VBoxContainer"]
margin_left = 693.0
margin_top = 192.0
margin_right = 693.0
margin_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
align = 1

[node name="Slot1" type="Button" parent="VBoxContainer"]
margin_left = 571.0
margin_top = 221.0
margin_right = 816.0
margin_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.980392, 0.94902, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "- Slot 1 -"
flat = true

[node name="Slot2" type="Button" parent="VBoxContainer"]
margin_left = 566.0
margin_top = 312.0
margin_right = 820.0
margin_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.980392, 0.94902, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "- Slot 2 -"
flat = true

[node name="Slot3" type="Button" parent="VBoxContainer"]
margin_left = 567.0
margin_top = 403.0
margin_right = 819.0
margin_bottom = 479.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.980392, 0.94902, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "- Slot 3 -"
flat = true

[node name="Spacer" type="Label" parent="VBoxContainer"]
margin_left = 693.0
margin_top = 494.0
margin_right = 693.0
margin_bottom = 508.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Back" type="Button" parent="VBoxContainer"]
margin_left = 642.0
margin_top = 523.0
margin_right = 744.0
margin_bottom = 587.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color = Color( 0.933333, 0.796078, 0.6, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 0.980392, 0.94902, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Back"
flat = true

[connection signal="pressed" from="VBoxContainer/Slot1" to="." method="_on_Slot1_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot2" to="." method="_on_Slot2_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot3" to="." method="_on_Slot3_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
